CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(test_concurrent)

ADD_COMPILE_OPTIONS("--std=c++11")

SET(PROJECT_ROOT_PATH "${CMAKE_SOURCE_DIR}")
MESSAGE(STATUS "fucking dir is ${PROJECT_ROOT_PATH}")

INCLUDE_DIRECTORIES("${PROJECT_ROOT_PATH}/common")
INCLUDE_DIRECTORIES("${PROJECT_ROOT_PATH}/util")

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(util)
ADD_SUBDIRECTORY(test)

